# pura-vida-sloth

./: .env.template  .gitignore  .mcp.json  ARCHITECTURE.md  DEPLOYMENT.md  DOWNLOADER_FIXES_PROGRESS.md  LICENSE  NEO4J_SCHEMA.md  PHASE6_STARTUP_GUIDE.md  QUICKSTART.md  README.md  hype_cycle_chart.json  hype_cycle_chart_normalized.json  pipeline_logs.json  pyproject.toml  render.yaml  requirements-api.txt  requirements-demo.txt  requirements.txt  run_harvest.py  sources_summary.md  start_backend.sh  temp_test_exclude_ids.py  vercel.json
.claude/: Claude.md  settings.local.json
agents/: FIXES_APPLIED_2025_01_09.md  IMPLEMENTATION_SUMMARY.md  chart_normalization_ranked.py  check_news_properties.py  check_sec_filing_properties.py  diagnose_community_classification.py  diagnose_score_distribution.py  first_run_multi_agentic_system.md  hype_cycle_chart.json  hype_cycle_chart_normalized.json  langgraph_orchestrator.py  multi_agentic_approach.md  test_full_pipeline.py  test_narrative_fix.py  test_phase1_queries.py  test_relevance_filter.py  test_sampling_capacity.py  test_tavily_integration.py
configs/: config_schema.json  eVTOL_graph_relations.json  evtol_company_fundamentals_only.json  evtol_config.json  evtol_config_new_sources_only.json  evtol_test_form13f.json  evtol_test_insider_transactions.json  evtol_test_single.json  quantum_computing_config.json
examples/: __init__.py  basic_usage.py
frontend/: .env.development  .env.production  DEPLOYMENT.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
graph/: __init__.py
parsers/: README.md  ade_parser.py  test_patent_output.json  test_scholarly_output.json
scripts/: normalize_documents.py
src/: __init__.py
tests/: __init__.py  test_duckdb_scholarly.py  (+8 more)
(+366 files in other folders)
